# StockFlow

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  API_REFERENCE.md  CASE_STUDY_ANALYSIS.md  CASE_STUDY_CONDENSED.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  TESTING_GUIDE.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  test_api.py  verify_api.py  wsgi.py
.github/workflows/: ci.yml
app/: __init__.py  docs.py  seed.py
app/models/: __init__.py  company.py  inventory.py  inventory_log.py  product.py  product_bundle.py  product_supplier.py  sales_record.py  supplier.py  warehouse.py
app/routes/: __init__.py  alert_routes.py  product_routes.py
app/services/: __init__.py  alert_service.py  product_service.py
app/utils/: __init__.py  http.py  validators.py
config/: __init__.py  settings.py
migrations/: README.md
tests/: conftest.py  test_alert_api.py  test_product_api.py
